env/k8s/gateway/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kanjava1911-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "mn.kanjava1911.bufferings.me"
    - "mn-native.kanjava1911.bufferings.me"
